# PyBot-ITAcadem

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  JUSTFILE.md  MVP_MOSCOW_MILESTONE_PLAN.md  Makefile  README.md  WORKFLOW.md  ansible.cfg  changes.txt  config.py  db_reset_start.py  docker-compose.prod.yml  docker-compose.yml  fill_point_db.py  justfile  pyproject.toml  requirements.txt  run.py  tach.toml  x.java
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactoring.md
.github/workflows/: ci.yaml  deploy.yml  docs.yaml  release.yaml
alembic/: env.py
alembic/versions/: 0786cd4e28e9_splited_points_in_to_the_nullable_.py  11524ee4d3b7_added_back_populates_to_different_task_.py  11f0eb05f267_fixed_typo_in_valuation_s_tablename.py  1ad4eff9adef_added_level_type_attr_in_level_model.py  4945016c09ea_splited_points_in_to_the_academic_and_.py  4a7c9d5f2b11_competence_unique_and_user_competence_cleanup.py  4db568388824_huge_orm_model_refactor.py  54c90f61f731_created_assosiation_table_for_user_and_.py  62f6b2a445a5_added_created_at_to_the_valuation_model.py  6b6908f826ac_initial.py  72cc8f0a976f_initialize_database_with_sqlite_support.py  72f84561e062_delete_level_id_in_user_model.py  799123993aca_remove_autoincrement.py  86a3c990de2b_added_date_for_valuation_project_and_.py  896f0e5ed882_initial_database_schema.py  8f5e51e162ce_added_uselist_options_in_conections_in_.py  90fcd26bc7e1_deleted_usertask.py  9d3b6f2a4c11_fix_role_requests_types_and_pending_unique.py  a3feba26ccab_added_proper_types_in_userlevel.py  bcba3b7e67b2_change_attribute_to_cascade.py  bd89ff7d4d88_initial_db_model.py  c59f18c62628_initial_db.py  c68c680d1863_added_new_model.py  d7355845c594_fixed_mapped_column_error.py  efe39e88ec31_added_userconstrant_for_the_userlevel_.py  f2c3d4e5a6b7_add_points_transactions_ledger.py  ff7733d0c965_edited_fk_in_user_and_level_models.py
ansible/inventory/: production.ini.example
ansible/playbooks/: bootstrap.yml  deploy.yml
db_class/: database.py
db_class/models/: __init__.py  achievement.py  attachments.py  attachments_types.py  comment_answers.py  comment_attachments.py  comments.py
db_class/models/project_module/: project_achievements.py  project_attachments.py  project_comments.py  project_member_roles.py  project_members.py  projects.py  projects_statuses.py
db_class/models/task_module/: task_attachments.py  task_comments.py  task_solution_comments.py  task_solution_statuses.py  task_solutions.py  tasks.py
db_class/models/user_module/: academic_role.py  admin_role.py  competence.py  level.py  user.py  user_activity_status.py  user_tasks.py  valuation.py
docs-project/: mkdocs.yml
docs-project/docs/: about.md  changelog.md  index.md
docs-project/docs/api-reference/: core.md  domain.md  dto.md  index.md  infrastructure.md  services.md
docs-project/docs/developer-guide/: architecture.md  contributing.md  deployment.md  index.md  testing.md
docs-project/docs/javascripts/: mathjax.js
docs-project/docs/stylesheets/: custom.css
docs-project/docs/user-guide/: configuration.md  examples.md  getting-started.md  index.md  installation.md
scripts/: docker-entrypoint.sh
services/: attachment.py  users.py
src/: __init__.py
src/pybot/: __init__.py
src/pybot/admin/: __init__.py  app.py
src/pybot/bot/: texts.py  tg_bot_run.py
src/pybot/cli/: __init__.py  seed.py
src/pybot/core/: __init__.py  config.py  constants.py  logger.py
src/pybot/db/: database.py
src/pybot/di/: containers.py
tests/: conftest.py
tests/bot/: test_broadcast_commands.py  test_change_roles_commands.py  test_competence_commands.py  test_di_bot_provider.py  test_di_container_runtime.py  test_di_notification_provider.py  test_di_notification_runtime.py  test_help_texts.py  test_leaderboard_commands.py  test_leaderboard_text_rendering.py  test_logging_notification_service.py  test_middlewares.py  test_misc_commands.py  test_points_commands.py  test_profile_flow.py  test_profile_text_rendering.py  test_role_catalog_command.py  test_role_request_commands.py  test_role_request_flow_callbacks.py  test_show_roles_command.py  test_taskiq_notification_dispatcher.py  test_taskiq_notification_task.py  test_taskiq_runtime_smoke.py  test_taskiq_weekly_leaderboard_task.py  test_taskiq_weekly_schedule_ensure.py  test_telegram_notification_service.py  test_tg_bootstrap.py  test_user_facing_texts.py  test_user_reg_getters.py  test_user_reg_handlers.py  test_user_reg_validation.py
tests/core/: test_broadcast_settings_validation.py  test_core_import_fail_fast_without_env.py  test_database_runtime.py  test_di_import_fail_fast_without_env.py  test_di_import_without_env.py  test_log_format_settings.py
tests/domain/: test_exceptions.py  test_points_transaction_model.py  test_user_model.py  test_valuation_model.py
tests/dto/: test_points.py  test_role_dto.py  test_task_schedule.py  test_user_dto.py
tests/factories/: __init__.py  dto_factories.py  model_factories.py
tests/health/: test_di_health_container.py  test_main_app.py  test_ready_endpoint.py  test_web_public_api.py
tests/infrastructure/: test_competence_repository.py  test_level_repository.py  test_points_transaction_repository.py  test_role_repository.py  test_role_request_repository.py  test_user_repository.py  test_valuation_repository.py
tests/providers/: __init__.py  db_provider.py  overrides_provider.py
tests/scripts/: test_fill_point_db.py
tests/service/: test_broadcast_service.py  test_competence_service.py  test_leaderboard_service.py  test_notification_facade.py  test_points_service.py  test_role_request_service.py  test_system_runtime_alerts.py  test_user_profile_service.py  test_users_service.py  test_weekly_leaderboard_publisher_service.py
tests/utils/: test_normalize_competence_names.py  test_normalize_message.py  test_phonenumber_normalization.py  test_role_checking.py
tg_bot/: tg_bot_run.py
tg_bot/handlers/: test.py
tg_bot/keyboards/: auth.py
(+274 files in other folders)
