[project]
name = "pybot-itacadem"
version = "0.12.0"
description = "PyBot — an asynchronous Telegram bot written in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.11.10",
    "yaspin>=3.4.0",
    "phonenumbers>=9.0.21",
    "aiosqlite>=0.22.1",
    "aiolimiter>=1.2.1",
    "aiocache>=0.12.3",
    "dishka>=1.7.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest-coverage>=0.0",
    "alembic>=1.17.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",
    "uv>=0.9.13",
    "mypy>=1.19.0",
    "faker>=38.2.0",
    "ruff>=0.14.11",
    "ty>=0.0.12",
    "polyfactory>=3.2.0",
    "httpie>=3.2.4",
    "pytest-aiogram>=0.1.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "hello.py",
    "docs"
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
preview = false
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "C90",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
    "TRY",
    "ANN",
    "S",
    "N",
]
fixable = ["ALL"]
unfixable = []
ignore = ["PLR6301", "TRY003", "D212", "D211", "RUF002", "D203", "PLC0414", "ANN401", "RUF029", "RUF001", "RUF003"]
exclude = ['test_*', '__init__.py']

[tool.ruff.lint.per-file-ignores]
"src/pybot/db/models/user_module/valuation.py" = ["PLR0913"]
"src/pybot/di/containers.py" = ["PLR0913"]
"src/pybot/services/role_request.py" = ["PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["pybot"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["src"]

[tool.ty.environment]
root = ["src", "."]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
version_variable = [
    "pyproject.toml:version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
allow_zero_version = true
build_command = ""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore:.*",
    "ci:.*",
    "docs:.*",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q --strict-markers"
