[project]
name = "pybot-itacadem"
version = "0.27.0"
description = "PyBot — an asynchronous Telegram bot written in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp-socks>=0.10.1",
    "aiogram-dialog>=2.4.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.11.10",
    "phonenumbers>=9.0.21",
    "aiosqlite>=0.22.1",
    "aiolimiter>=1.2.1",
    "aiocache>=0.12.3",
    "dishka>=1.7.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "tenacity>=9.0.0",
    "alembic>=1.17.2",
    "redis>=6.4.0",
    "starlette-dishka>=1.0.1",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
    "pendulum>=3.2.0",
    "pydantic-extra-types[cron,pendulum]>=2.11.0",
    "tyro>=1.0.10",
]

[project.scripts]
pybot-seed = "pybot.cli.seed:main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocstrings-python>=0.10.0",
    "pymdown-extensions>=10.5",
    "mkdocs-autorefs>=0.5.0",
    "Pygments>=2.17.0",
]

[dependency-groups]
dev = [
    "pytest-coverage>=0.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",
    "uv>=0.9.13",
    "mypy>=1.19.0",
    "ruff==0.15.5",
    "ty>=0.0.12",
    "polyfactory>=3.2.0",
    "httpie>=3.2.4",
    "pytest-aiogram>=0.1.0",
    "tach>=0.34.1",
    "faker>=38.2.0",
]

[tool.uv]
package = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "hello.py",
    "docs"
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
preview = false
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "C90",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
    "TRY",
    "ANN",
    "S",
    "N",
    "D",
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "PLR6301",
    "TRY003",
    "RUF002",
    "PLC0414",
    "ANN401",
    "RUF029",
    "RUF001",
    "RUF003",
    # D1xx — не требовать обязательное наличие docstrings
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D212",  # Multi-line summary first line (конфликтует с Google convention)
]
exclude = ['test_*', '__init__.py']

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.isort]
known-first-party = ["pybot"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["src"]


[tool.ty.environment]
root = ["src", "."]
extra-paths = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
version_variable = [
    "pyproject.toml:version",
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
allow_zero_version = true
build_command = ""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "chore:.*",
    "ci:.*",
    "docs:.*",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q --strict-markers"

# ── uv build settings ────────────────────────────────────────────────────────────
# Required so that uv installs [project.scripts] entry points (pybot-seed).
# Without package = true, uv skips script installation for non-packaged projects.


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The pybot package lives under src/, tell hatchling where to find it.
packages = ["src/pybot"]
